--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
-name = "blogcast-app"
+name = "blogcast101"
 pages_build_output_dir = "dist"
-compatibility_date = "2024-03-01"
+compatibility_date = "2025-03-01"
 
 # This section links your KV Cache to your backend functions
 [[kv_namespaces]]
