--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,6 @@ name = "blogcast100"
 compatibility_date = "2024-07-08"
 pages_build_output_dir = "dist"
 
-#[[kv_namespaces]]
-#binding = "PODCAST_CACHE"
-#id = "" 
+[[kv_namespaces]]
+binding = "PODCAST_CACHE"
+id = "b13a48fb74c741298a6432216d687437"
